--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "geekhub-app",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -9,6 +10,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
+    "recoil-persist": "^2.9.0",
+    "socket.io-client": "^3.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
