--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "NODE_ENV=production npm start",
+    "serve": "npm run build && serve -l 8000 -s build"
   },
   "eslintConfig": {
     "extends": [
