--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-picker": "^0.0.6",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
     "recoil-persist": "^2.9.0",
     "socket.io-client": "^4.1.2",
+    "styled-components": "^5.3.0",
+    "use-file-picker": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
